feat: Integrate UI and backend for Smart Analysis
- Connected frontend Smart-Analysis.js payload to backend DTOs.
- Fixed confidence score parsing to extract from UI and save properly to the DB.
- Fixed missing generated description in the validation_report table by mapping it from the inventory item.
- Implemented two-step save flow in frontend to upload and link the gem image immediately after generating the inventoryItemId.